Fixed spacing on createEvent

--- a/public/view/stylesheet.css
+++ b/public/view/stylesheet.css
@@ -181,6 +181,7 @@ ntext {
   border-radius:10px;
   margin-bottom: 15px;
   margin-right: 50px;
+  min-height: 60px;
 }
 
 .content {
@@ -188,7 +189,7 @@ ntext {
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 10px;
   background-color: rgba(5,58,89,0.6);
   border-radius:10px;
   margin-top: 15px;
@@ -207,9 +208,11 @@ contentcenter {
 }
 
 .cover {
-    background-image: url("../assets/nature-background.jpg");
-    width: 100%;
-    height: 50%;
+  margin-top: 10px;
+  background-image: url("../assets/nature-background.jpg");
+  width: 100%;
+  height: 25%;
+  border-radius: 5px
 }
 .sidebar {
   height: 100%;
